@@ -246,105 +246,6 @@ try_private:
   return iscolor;
 }
 
-/*
- * This function adds the path to the fontpath of the given display.
- * It's mostly copied from the X11R5 distribution.
- */
-
-static void set_font_path(Display *dpy, char *path) {
-  char **currentList = NULL; int ncurrent = 0;
-  char **directoryList = NULL; int ndirs = 0;
-
-  currentList = XGetFontPath (dpy, &ncurrent);
-  if(currentList==NULL) {
-    fprintf(stderr,"Unable to get old font path.\n");
-    return;
-  }
-  {
-    register char *cp = path;
-    ndirs=1;
-    while((cp=strchr(cp, ','))!=NULL)
-      ndirs++,cp++;
-    directoryList=(char **) malloc(ndirs*sizeof(char *));
-    if(!directoryList) {
-      fprintf(stderr,"Unable to allocate memory for font path directory.\n");
-      return;
-    }
-  }
-  {
-    int i=0;
-    char *cp = path;
-    directoryList[i++]=cp;
-    while((cp=strchr(cp, ','))!=NULL)
-      directoryList[i++]=cp+1,
-      *cp++='\0';
-    if(i!=ndirs) {
-      fprintf(stderr,"Internal error, only parsed %d of %d dirs.\n",i,ndirs);
-      return;
-    }
-  }
-  {
-    int nnew=ndirs+ncurrent;
-    char **newList = (char **) malloc (nnew * sizeof(char *));
-
-    if(!newList) {
-      fprintf(stderr,"Couldn't get memory for new fontpath.\n");
-      return;
-    }
-    memcpy((void *)newList,(void *)directoryList,
-           (unsigned) (ndirs*sizeof (char *)));
-    memcpy((void *) (newList + ndirs), (void *) currentList,
-           (unsigned) (ncurrent*sizeof (char *)));
-    XSetFontPath(dpy,newList, nnew);
-    free((char *)newList);
-  }
-  if (directoryList)
-    free((char *) directoryList);
-  if (currentList)
-    XFreeFontPath (currentList);
-}
-
-/*
- * Checks if "crossfire" is present somewhere in the fontpath of
- * the given display.
- */
-
-static int check_font_path(Display *dpy) {
-  int count;
-  char **list;
-
-  list = XListFonts(dpy, font_graphic, 1, &count);
-  fprintf(stderr, "Matching fonts to %s: %d (%s)\n",
-      font_graphic,count,count?*list:"");
-  XFreeFontNames(list);
-  return count;
-}
-
-/*
- * Uses check_font_path() and set_font_path() to check and, if needed
- * fix the fontpath for the player.
- * Function changed around to make it useful for the client.
- * Passing the player struct to this is not required - xio.c
- * can use the return value to set the use_pixmaps value in the
- * player struct.  name is only passed to give better error
- * messages.
- */
-
-static int fixfontpath(Display *disp, char *name) {
-
-  if (check_font_path(disp))
-    return 0;
-
-  fprintf(stderr,"Trying to fix fontpath for display %s.\n",name);
-  set_font_path(disp,FONTDIR);
-  if(check_font_path(disp))
-     return 0;
-  fprintf(stderr,"Failed, switching to pixmaps (this might take a while).\n");
-  return 1;
-}
-
-
-
 /***********************************************************************
  *
  * Key board input translations are handled here.  We don't deal with
